--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
 * {
-    font-family: Arial;
-    font-size: 12pt;
-   }
-   
-   .chat {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;   
+}
+
+.chat {
     width: 400px;
     height: 90%;
     position: fixed;
     overflow: scroll;
-   }
-   
-   .actions {
+}
+
+.actions {
     position: fixed;
     bottom: 0;
     display: block;
     width: 100%;
-   }
-   
-   .actions input{
+}
+
+.actions input {
     height: 30px;
     display: block;
     width: 100%;
@@ -25,25 +25,25 @@
     border-top: 0;
     border-left: 0;
     border-right: 0;
-   }
-   
-   .messages div {
+}
+
+.messages div {
     max-width: 60%;
     display: block;
     margin: 5px;
     padding: 10px;
     border-radius: 7px;
-   }
-   
-   .messages .bot {
+}
+
+.messsages .bot {
     text-align: left;
     margin-right: auto;
-    background: #001f3f;
-    color: white;
-   }
-   
-   .messages .self {
+    background-color: #001f3f;
+    color: #fff;
+}
+
+.messages .self {
     text-align: right;
     margin-left: auto;
-    background: #DDD
-   }
+    background-color: #ddd;
+}
